fix first-section jumping

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,6 @@
   max-width: 1110px;
   width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
