--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  min-height: 120px;
+  min-height: 200px;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
